<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_color">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="16dp">



                <TextView
                    android:id="@+id/welcome_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="24dp"
                    android:layout_gravity="center" />


                <EditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_round_corner"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="12dp" />

                <EditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/edit_text_round_corner"
                    android:autofillHints="" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="5dp"
                    android:soundEffectsEnabled="true"
                    android:text="@string/forgot_password"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/button_gradient_background"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:textColor="@color/white" />


                <TextView
                    android:id="@+id/or_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="24dp"
                    android:layout_gravity="center_horizontal" />
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:cardBackgroundColor="#3b5998"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="78dp"
                            android:layout_height="50dp"
                            android:src="@drawable/facebook" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/facebook_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:padding="16dp"
                            android:text="@string/sign_in_with_facebook"
                            android:textColor="@color/white" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:cardBackgroundColor="#ffffff"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_gravity="center"
                            android:layout_width="78dp"
                            android:layout_height="40dp"
                            android:src="@drawable/google" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/google_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:padding="16dp"
                            android:text="Sing In With Google"
                            android:textColor="@color/black" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:cardBackgroundColor="#000000"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="78dp"
                            android:layout_height="50dp"
                            android:src="@drawable/apple" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/apple_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:padding="16dp"
                            android:text="Sing In With Apple"
                            android:textColor="@color/white" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="24dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/need_account_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/need_an_account"
                        android:textSize="14sp"
                        android:textColor="@color/black" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/sign_up_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="@string/sign_up"
                        android:textColor="#FC575E"
                        android:textStyle="bold"
                        android:padding="5dp"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:clickable="false"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:soundEffectsEnabled="true" />


                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>